obermuhlner/MemoryClassLoader: remove deprecation warning about URL constructor